--- a/index.html
+++ b/index.html
@@ -642,11 +642,11 @@
             <div class="container">
                 <div class="row g-4 justify-content-between">
                     <div class="col-auto">
-                        <p class="mb-0">© Copyright Elixir. All Rights Reserved</p>
+                        <p class="mb-0">© All Rights Reserved</p>
                     </div>
                     <div class="col-auto">
-                        <p class="mb-0">Designed with 💜 By <a
-                                href="https://www.youtube.com/channel/UCYMEEnLzGGGIpQQ3Nu_sBsQ">SALMAN</a></p>
+                        <p class="mb-0">CM </p>
+                            <!-- <a href="https://www.youtube.com/channel/UCYMEEnLzGGGIpQQ3Nu_sBsQ">DEV</a> -->
                     </div>
                 </div>
             </div>
