--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
         </div>
     </section>
 
-    <!-- REVIEW -->
-    <section id="reviews" class="section-padding bg-light">
+    <!--! REVIEW -->
+    <!-- <section id="reviews" class="section-padding bg-light">
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="150">
@@ -452,7 +452,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- TEAM -->
     <section id="team" class="section-padding">
