--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>IBS</title>
-      <!-- favicon -->
-  <link rel="icon" href="./assets/images/favicon.png" type="image/png" sizes="TAMAÑO-FAV">
+    <!-- favicon -->
+    <link rel="icon" href="./assets/images/favicon.png" type="image/png" sizes="TAMAÑO-FAV">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
@@ -69,7 +69,8 @@
                         te daremos gracias por siempre; de generación en generación contaremos tu alabanza. Salmos 79:13
                     </h5>
                     <div data-aos="fade-up" data-aos-delay="50">
-                        <a href="#" class="btn btn-light ms-2">Nuestra Confesion de Fe</a>
+                        <a class="btn btn-light ms-2" href="https://www.chapellibrary.org/pdf/books/lbcos.pdf"
+                            target="_blank">Nuestra Confesion de Fe</a>
                     </div>
                 </div>
             </div>
@@ -168,14 +169,17 @@
                             <i class="ri-user-2-fill"></i>
                         </div>
                         <h5 class="mt-4 mb-3">Tunja</h5>
-                        <p>Iglesia Bautista Reformada De Tunja
-                            Domingos 10:00 a.m
-
-                            Escuela Dominical y Predicación
-
+                        <p>
+                            Domingo: Estudio Biblico  10:00 a.m
+                            Miercoles: Culto de Oración 7:00 p.m
+                            Viernes: Dicipulado 6:30 p.m
+                        </p>
+                        <p>
                             Carrera 7a No. 51-01 La Granja Norte Parte Baja
+                            Mayor información: 301 3149610
+                        </p>
 
-                            Mayor información: 301 3149610</p>
+
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="250">
@@ -184,14 +188,11 @@
                             <i class="ri-user-2-fill"></i>
                         </div>
                         <h5 class="mt-4 mb-3">Sogamoso</h5>
-                        <p>Iglesia Bautista De Sogamoso
-                            Domingos 10:00 a.m
-
-                            Escuela Dominical y Predicación
-
-                            Viernes 6:30 p.m.
-
-                            Estudio Bíblico</p>
+                        <p>
+                            Domingo: Escuela Dominical y Predicación 10:00 a.m  </p>
+                            <p>
+                                Viernes: Estudio Bíblico 6:30 p.m
+                            </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="350">
@@ -200,14 +201,11 @@
                             <i class="ri-user-2-fill"></i>
                         </div>
                         <h5 class="mt-4 mb-3">Duitama</h5>
-                        <p>Iglesia Bautista De Sogamoso
-                            Domingos 10:00 a.m
-
-                            Escuela Dominical y Predicación
-
-                            Viernes 6:30 p.m.
-
-                            Estudio Bíblico</p>
+                        <p>
+                            Domingo: Escuela Dominical y Predicación 10:00 a.m  </p>
+                            <p>
+                                Viernes: Estudio Bíblico 6:30 p.m
+                            </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="450">
@@ -246,13 +244,13 @@
 
 
 
-    <!-- PORTFOLIO -->
+    <!-- EVENTOS -->
     <section id="portfolio" class="section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="150">
                     <div class="section-title">
-                        <h1 class="display-4 fw-semibold">Conoce Nuestro Proximos Eventos</h1>
+                        <h1 class="display-4 fw-semibold">Aniversario IBS 63</h1>
                         <div class="line"></div>
                         <p>Y todo lo que hagáis, hacedlo de corazón, como para el Señor y no para los hombres</p>
                     </div>
@@ -262,19 +260,21 @@
                 <div class="col-md-6" data-aos="fade-down" data-aos-delay="150">
                     <div class="portfolio-item image-zoom">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/evangelismo4.jpg" alt="">
+                            <img src="./assets/images/ani1.jpg" alt="aniversario">
                         </div>
-                        <a href="./assets/images/evangelismo4.jpg" data-fancybox="gallery" class="iconbox"><i
+                        <a href="./assets/images/ani1.jpg" data-fancybox="gallery" class="iconbox"><i
                                 class="ri-search-2-line"></i></a>
                     </div>
+
                     <div class="portfolio-item image-zoom mt-4">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/biblia2.jpg" alt="">
+                            <img src="./assets/images/ani2.jpg" alt="aniversario">
                         </div>
-                        <a href="./assets/images/biblia2.jpg" data-fancybox="gallery" class="iconbox"><i
+                        <a href="./assets/images/ani2.jpg" data-fancybox="gallery" class="iconbox"><i
                                 class="ri-search-2-line"></i></a>
                     </div>
                 </div>
+
                 <div class="col-md-6" data-aos="fade-down" data-aos-delay="250">
                     <div class="portfolio-item image-zoom">
                         <div class="image-zoom-wrapper">
@@ -285,13 +285,24 @@
                     </div>
                     <div class="portfolio-item image-zoom mt-4">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/bosque.jpg" alt="">
+                            <img src="./assets/images/ani3.jpg" alt="">
                         </div>
-                        <a href="./assets/images/bosque.jpg" data-fancybox="gallery" class="iconbox"><i
+                        <a href="./assets/images/ani3.jpg" data-fancybox="gallery" class="iconbox"><i
+                                class="ri-search-2-line"></i></a>
+                        <a href="./assets/images/ani4.jpg" data-fancybox="gallery" class="iconbox"><i
+                                class="ri-search-2-line"></i></a>
+                        <a href="./assets/images/ani5.jpg" data-fancybox="gallery" class="iconbox"><i
+                                class="ri-search-2-line"></i></a>
+                        <a href="./assets/images/ani6.jpg" data-fancybox="gallery" class="iconbox"><i
+                                class="ri-search-2-line"></i></a>
+                        <a href="./assets/images/ani7.jpg" data-fancybox="gallery" class="iconbox"><i
+                                class="ri-search-2-line"></i></a>
+                        <a href="./assets/images/ani8.jpg" data-fancybox="gallery" class="iconbox"><i
                                 class="ri-search-2-line"></i></a>
                     </div>
                 </div>
-                <!-- <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
+            </div>
+            <!-- <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
                     <div class="portfolio-item image-zoom">
                         <div class="image-zoom-wrapper">
                             <img src="./assets/images/project-5.jpg" alt="">
@@ -307,7 +318,7 @@
                                 class="ri-search-2-line"></i></a>
                     </div>
                 </div> -->
-            </div>
+        </div>
         </div>
     </section>
 
@@ -562,31 +573,31 @@
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/ibs3.jpg" alt="">
+                            <img src="./assets/images/sermon04-08.jpg" alt="predicacion">
                         </div>
-                        <h5 class="mt-4">La vida Cristiana</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit sequi quos magni!</p>
-                        <a href="#">Read More</a>
+                        <h5 class="mt-4">LA MUERTE, EL TORMENTO PARA LOS VIVOS - PARTE I - 04/08/2024</h5>
+                        <p></p>
+                        <a href="https://www.youtube.com/watch?v=tGTv8mOWO3o" target="_blank">ver Video</a>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/ibs3.jpg" alt="">
+                            <img src="./assets/images/sermon 28-07-24.jpg" alt="predicacion">
                         </div>
-                        <h5 class="mt-4">Web Design 2022</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit sequi quos magni!</p>
-                        <a href="#">Read More</a>
+                        <h5 class="mt-4">ESTUDIO BIBLICO DOMINICAL  CARACTER VARONIL - 28/07/2024</h5>
+                        <p></p>
+                        <a href="https://www.youtube.com/watch?v=kQl_eulG-ig" target="_blank">Ver video</a>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/ibs3.jpg" alt="">
+                            <img src="./assets/images/sermon12-07-24.jpg" alt="predicacion">
                         </div>
-                        <h5 class="mt-4">Web Design 2022</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit sequi quos magni!</p>
-                        <a href="#">Read More</a>
+                        <h5 class="mt-4">LA HONESTIDAD; EL CARACTER DEL CRISTIANO - 12/07/2024</h5>
+                        <p></p>
+                        <a href="https://www.youtube.com/watch?v=eichkWd9kvw" target="_blank">Ver video</a>
                     </div>
                 </div>
             </div>
@@ -599,7 +610,8 @@
             <div class="container">
                 <div class="row gy-5">
                     <div class="col-lg-3 col-sm-6">
-                        <a href="#"><img style="border-radius: 50%; width: 12.5rem;" src="./assets/images/logo2.1.jpeg" alt=""></a>
+                        <a href="#"><img style="border-radius: 50%; width: 12.5rem;" src="./assets/images/logo2.1.jpeg"
+                                alt=""></a>
                         <div class="line"></div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, hic!</p>
                         <div class="social-icons">
@@ -649,7 +661,7 @@
                     </div>
                     <div class="col-auto">
                         <p class="mb-0">CM </p>
-                            <!-- <a href="https://www.youtube.com/channel/UCYMEEnLzGGGIpQQ3Nu_sBsQ">DEV</a> -->
+                        <!-- <a href="https://www.youtube.com/channel/UCYMEEnLzGGGIpQQ3Nu_sBsQ">DEV</a> -->
                     </div>
                 </div>
             </div>
