--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#portfolio">Eventos</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#reviews">Testimonios</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="#team">Servidores</a>
                     </li>
@@ -86,7 +86,7 @@
                         <h1 class="display-4 fw-semibold">Acerca de Nosotros</h1>
                         <div class="line"></div>
                         <p>Somos una iglesia centrada en la Palabra de Dios y comprometida con comunicar su Gloria por
-                            medio del Evangelio.</p>
+                            medio del Evangelio. <br> <a href="./leerMas.html" target="_blank">Leer mas</a></p>
                     </div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                         </div>
                         <div>
                             <h5>Sola scriptura</h5>
-                            <p>solo por medio de la Escritura</p>
+                            <p>Solo por medio de la Escritura</p>
                         </div>
                     </div>
                     <div class="d-flex mb-3">
@@ -123,7 +123,7 @@
                         </div>
                         <div>
                             <h5>Sola gratia</h5>
-                            <p>solo por la gracia</p>
+                            <p>Solo por la gracia</p>
                         </div>
                     </div>
                     <div class="d-flex">
@@ -132,7 +132,7 @@
                         </div>
                         <div>
                             <h5>Solus Christus o Solo Christo </h5>
-                            <p>solo Cristo salva</p>
+                            <p>Solo Cristo salva</p>
                         </div>
                     </div>
                     <div class="d-flex">
@@ -141,7 +141,7 @@
                         </div>
                         <div>
                             <h5>Soli Deo gloria</h5>
-                            <p>solo a Dios la gloria</p>
+                            <p>Solo a Dios la gloria</p>
                         </div>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                         </div>
                         <h5 class="mt-4 mb-3">Tunja</h5>
                         <p>
-                            Domingo: Estudio Biblico  10:00 a.m
+                            Domingo: Estudio Biblico 10:00 a.m
                             Miercoles: Culto de Oración 7:00 p.m
                             Viernes: Dicipulado 6:30 p.m
                         </p>
@@ -189,10 +189,10 @@
                         </div>
                         <h5 class="mt-4 mb-3">Sogamoso</h5>
                         <p>
-                            Domingo: Escuela Dominical y Predicación 10:00 a.m  </p>
-                            <p>
-                                Viernes: Estudio Bíblico 6:30 p.m
-                            </p>
+                            Domingo: Escuela Dominical y Predicación 10:00 a.m </p>
+                        <p>
+                            Viernes: Estudio Bíblico 6:30 p.m
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="350">
@@ -202,10 +202,10 @@
                         </div>
                         <h5 class="mt-4 mb-3">Duitama</h5>
                         <p>
-                            Domingo: Escuela Dominical y Predicación 10:00 a.m  </p>
-                            <p>
-                                Viernes: Estudio Bíblico 6:30 p.m
-                            </p>
+                            Domingo: Escuela Dominical y Predicación 10:00 a.m </p>
+                        <p>
+                            Viernes: Estudio Bíblico 6:30 p.m
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6" data-aos="fade-down" data-aos-delay="450">
@@ -573,7 +573,9 @@
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/sermon04-08.jpg" alt="predicacion">
+                            <a href="https://www.youtube.com/watch?v=tGTv8mOWO3o" target="_blank">
+                                <img src="./assets/images/sermon04-08.jpg" alt="predicacion">
+                            </a>
                         </div>
                         <h5 class="mt-4">LA MUERTE, EL TORMENTO PARA LOS VIVOS - PARTE I - 04/08/2024</h5>
                         <p></p>
@@ -583,9 +585,11 @@
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/sermon 28-07-24.jpg" alt="predicacion">
+                            <a href="https://www.youtube.com/watch?v=kQl_eulG-ig" target="_blank">
+                                <img src="./assets/images/sermon 28-07-24.jpg" alt="predicacion">
+                            </a>
                         </div>
-                        <h5 class="mt-4">ESTUDIO BIBLICO DOMINICAL  CARACTER VARONIL - 28/07/2024</h5>
+                        <h5 class="mt-4">ESTUDIO BIBLICO DOMINICAL CARACTER VARONIL - 28/07/2024</h5>
                         <p></p>
                         <a href="https://www.youtube.com/watch?v=kQl_eulG-ig" target="_blank">Ver video</a>
                     </div>
@@ -593,11 +597,13 @@
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/sermon12-07-24.jpg" alt="predicacion">
+                            <a href="https://www.youtube.com/watch?v=eichkWd9kvw" target="_blank">
+                                <img src="./assets/images/sermon12-07-24.jpg" alt="predicacion">
+                            </a>
                         </div>
                         <h5 class="mt-4">LA HONESTIDAD; EL CARACTER DEL CRISTIANO - 12/07/2024</h5>
                         <p></p>
-                        <a href="https://www.youtube.com/watch?v=eichkWd9kvw" target="_blank">Ver video</a>
+                        <a href="https://www.youtube.com/watch?v=eichkWd9kvw" target="_blank"> Ver video</a>
                     </div>
                 </div>
             </div>
