--- a/leerMas.html
+++ b/leerMas.html
@@ -332,7 +332,7 @@
       <div class="row">
         <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="50">
           <div class="section-title">
-            <h4 class=" fw-semibold">Acerca de Nosotros</h4>
+            <h4 class=" fw-semibold">Tomado de:</h4>
             <div class="line"></div>
             <p>William Payne
               Fragmentos de un sermón predicado
