--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <h1 class="display-4 fw-semibold">Acerca de Nosotros</h1>
                         <div class="line"></div>
                         <p>Somos una iglesia centrada en la Palabra de Dios y comprometida con comunicar su Gloria por
-                            medio del Evangelio. <br> <a href="./leerMas.html" target="_blank">Leer mas</a></p>
+                            medio del Evangelio. <br> <a href="./leer-mas.html" target="_blank">Leer mas</a></p>
                     </div>
                 </div>
             </div>
