--- a/leer-mas.html
+++ b/leer-mas.html
@@ -29,29 +29,29 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#hero">Inicio</a>
+            <a class="nav-link" href="index.html#hero">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">Nosotros</a>
+            <a class="nav-link" href="index.html#about">Nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#services">Servicios</a>
+            <a class="nav-link" href="index.html#services">Servicios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#portfolio">Eventos</a>
+            <a class="nav-link" href="index.html#portfolio">Eventos</a>
           </li>
           <!-- <li class="nav-item">
                         <a class="nav-link" href="#reviews">Testimonios</a>
                     </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="#team">Servidores</a>
+            <a class="nav-link" href="index.html#team">Servidores</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#blog">Sermones</a>
+            <a class="nav-link" href="index.html#blog">Sermones</a>
           </li>
         </ul>
-        <a href="#contact" class="btn btn-brand ms-lg-3">Contacto</a>
+        <a href="index.html#contact" class="btn btn-brand ms-lg-3">Contacto</a>
       </div>
     </div>
   </nav>
