--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </h5>
                     <div data-aos="fade-up" data-aos-delay="50">
                         <a class="btn btn-light ms-2" href="https://www.chapellibrary.org/pdf/books/lbcos.pdf"
-                            target="_blank">Nuestra Confesion de Fe</a>
+                            target="_blank">Nuestra Confesión de Fe</a>
                     </div>
                 </div>
             </div>
@@ -98,13 +98,13 @@
                     <h1>Iglesia Bautista Reformada de Sogamoso</h1>
                     <p class="mt-3 mb-4">Existimos para enseñar y vivir el cristianismo
                         bíblico despertando un genuino interés en el mensaje verdadero y transformador de Cristo en
-                        Boyaca</p>
+                        Boyacá</p>
                     <div class="d-flex pt-4 mb-3">
                         <div class="iconbox me-4">
                             <i class="ri-user-5-fill"></i>
                         </div>
                         <div>
-                            <h5>Sola scriptura</h5>
+                            <h5>Sola Scriptura</h5>
                             <p>Solo por medio de la Escritura</p>
                         </div>
                     </div>
@@ -113,8 +113,8 @@
                             <i class="ri-user-5-fill"></i>
                         </div>
                         <div>
-                            <h5>Sola fide</h5>
-                            <p>Solo por la fe Dios salva</p>
+                            <h5>Sola Fide</h5>
+                            <p>Solo por la fe Dios Salva</p>
                         </div>
                     </div>
                     <div class="d-flex">
@@ -122,8 +122,8 @@
                             <i class="ri-user-5-fill"></i>
                         </div>
                         <div>
-                            <h5>Sola gratia</h5>
-                            <p>Solo por la gracia</p>
+                            <h5>Sola Gratia</h5>
+                            <p>Solo por la Gracia</p>
                         </div>
                     </div>
                     <div class="d-flex">
@@ -132,7 +132,7 @@
                         </div>
                         <div>
                             <h5>Solus Christus o Solo Christo </h5>
-                            <p>Solo Cristo salva</p>
+                            <p>Solo Cristo Salva</p>
                         </div>
                     </div>
                     <div class="d-flex">
@@ -140,8 +140,8 @@
                             <i class="ri-user-5-fill"></i>
                         </div>
                         <div>
-                            <h5>Soli Deo gloria</h5>
-                            <p>Solo a Dios la gloria</p>
+                            <h5>Soli Deo Gloria</h5>
+                            <p>Solo a Dios la Gloria</p>
                         </div>
                     </div>
                 </div>
@@ -170,9 +170,9 @@
                         </div>
                         <h5 class="mt-4 mb-3">Tunja</h5>
                         <p>
-                            Domingo: Estudio Biblico 10:00 a.m
-                            Miercoles: Culto de Oración 7:00 p.m
-                            Viernes: Dicipulado 6:30 p.m
+                            Domingo: Estudio Bíblico 10:00 a.m
+                            Miércoles: Culto de Oración 7:00 p.m
+                            Viernes: Discipulado 6:30 p.m
                         </p>
                         <p>
                             Carrera 7a No. 51-01 La Granja Norte Parte Baja
@@ -233,7 +233,7 @@
                         <div class="iconbox">
                             <i class="ri-user-2-fill"></i>
                         </div>
-                        <h5 class="mt-4 mb-3">Reunion de Jovenes</h5>
+                        <h5 class="mt-4 mb-3">Reunion de Jóvenes</h5>
                         <h5 class="mt-4 mb-3">Sogamoso</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fugiat sunt distinctio?</p>
                     </div>
@@ -485,8 +485,8 @@
                             <img src="./assets/images/person-3.jpg" alt="">
                         </div>
                         <div class="team-member-content">
-                            <h4 class="text-white">Narces de Jesus Rodriguez</h4>
-                            <p class="mb-0 text-white">Pator de la iglesia en Sogamoso</p>
+                            <h4 class="text-white">Narcés de Jesus Rodríguez</h4>
+                            <p class="mb-0 text-white">Pastor de la iglesia en Sogamoso</p>
                         </div>
                     </div>
                 </div>
@@ -496,7 +496,7 @@
                             <img src="./assets/images/person-3.jpg" alt="">
                         </div>
                         <div class="team-member-content">
-                            <h4 class="text-white">Carlos Herran</h4>
+                            <h4 class="text-white">Carlos Herrán</h4>
                             <p class="mb-0 text-white">Pastor de la Iglesia en Tunja</p>
                         </div>
                     </div>
@@ -507,8 +507,8 @@
                             <img src="./assets/images/person-3.jpg" alt="">
                         </div>
                         <div class="team-member-content">
-                            <h4 class="text-white">Cristian Mendoza</h4>
-                            <p class="mb-0 text-white">Pastor de la Iglesia en Duitama</p>
+                            <h4 class="text-white">Diego Cárdenas</h4>
+                            <p class="mb-0 text-white">Encargado de la Iglesia en Duitama</p>
                         </div>
                     </div>
                 </div>
@@ -524,28 +524,27 @@
                     <div class="section-title">
                         <h1 class="display-4 text-white fw-semibold">Contactanos</h1>
                         <div class="line bg-white"></div>
-                        <p class="text-white">Contactanos para recibir mas informacion, si necesitas apoyo, oracion,
-                            concejeria ......................</p>
+                        <p class="text-white">Contáctanos para recibir mas información, si necesitas apoyo, oración o Consejería no dudes en escribirnos</p>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center" data-aos="fade-down" data-aos-delay="250">
                 <div class="col-lg-8">
-                    <form action="#" class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
+                    <form action="https://formsubmit.co/ig.bautistadesogamoso@gmail.com" method="POST"  class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
                         <div class="form-group col-lg-6">
-                            <input type="text" class="form-control" placeholder="Nombre">
+                            <input type="text" name="nombre" class="form-control" placeholder="Nombre">
                         </div>
                         <div class="form-group col-lg-6">
-                            <input type="text" class="form-control" placeholder="Apellido">
+                            <input type="text" name="apellido" class="form-control" placeholder="Apellido">
                         </div>
                         <div class="form-group col-lg-12">
-                            <input type="email" class="form-control" placeholder="Email">
+                            <input type="email" name="email" class="form-control" placeholder="Email">
                         </div>
                         <div class="form-group col-lg-12">
-                            <input type="text" class="form-control" placeholder="Motivo">
+                            <input type="text" name="motivo" class="form-control" placeholder="Motivo">
                         </div>
                         <div class="form-group col-lg-12">
-                            <textarea name="message" rows="5" class="form-control" placeholder="Mensaje"></textarea>
+                            <textarea name="message" name="texto" rows="5" class="form-control" placeholder="Mensaje"></textarea>
                         </div>
                         <div class="form-group col-lg-12 d-grid">
                             <button class="btn btn-brand">Send Message</button>
@@ -619,41 +618,44 @@
                         <a href="#"><img style="border-radius: 50%; width: 12.5rem;" src="./assets/images/logo2.1.jpeg"
                                 alt=""></a>
                         <div class="line"></div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, hic!</p>
+                        <p>Iglesia Biblica</p>
                         <div class="social-icons">
-                            <a href="#"><i class="ri-twitter-fill"></i></a>
-                            <a href="#"><i class="ri-instagram-fill"></i></a>
-                            <a href="#"><i class="ri-github-fill"></i></a>
-                            <a href="#"><i class="ri-dribbble-fill"></i></a>
+                            <!-- <a href="#"><i class="ri-twitter-fill"></i></a> -->
+                            <a href="https://www.instagram.com/ig.bautistasogamoso/" target="_blank"><i class="ri-instagram-fill"></i></a>
+                            <a href="https://www.facebook.com/Iglesiabautistadesogamoso" target="_blank"><i class="ri-facebook-fill"></i></a>
+                            <a href="#"><i class="ri-whatsapp-fill"></i></a>
+                            
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <h5 class="mb-0 text-white">SERVICES</h5>
+                        <h5 class="mb-0 text-white">Estamos para servirte</h5>
                         <div class="line"></div>
                         <ul>
-                            <li><a href="#">UI Design</a></li>
-                            <li><a href="#">UX Design</a></li>
-                            <li><a href="#">Branding</a></li>
-                            <li><a href="#">Logo Designing</a></li>
+                            <li><a href="#contact">Consejeria</a></li>
+                            <li><a href="#contact">Oracion</a></li>
+                            <li><a href="#contact">Servicio Social</a></li>
+                            <!-- <li><a href="#"></a>Donaciones </li> -->
                         </ul>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <h5 class="mb-0 text-white">ABOUT</h5>
+                        <h5 class="mb-0 text-white">IBS-SOGAMOSO</h5>
                         <div class="line"></div>
                         <ul>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Company</a></li>
-                            <li><a href="#">Career</a></li>
+                            <li><a href="#hero">Inicio</a></li>
+                            <li><a href="#about">Nosotros</a></li>
+                            <li><a href="#services">Servicios</a></li>
+                            <li><a href="#blog">Blog</a></li>
+                            <li><a href="#team">Servidores</a></li>
+                            <!-- <li><a href="#">Career</a></li> -->
                         </ul>
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <h5 class="mb-0 text-white">CONTACT</h5>
                         <div class="line"></div>
                         <ul>
-                            <li>Sogamoso Boyaca</li>
-                            <li>(414) 586 - 3017</li>
-                            <li>www.example.com</li>
+                            <li>Cra 14 #18-47 Sogamoso, Boyacá</li>
+                            <li>(+57) 586 - 3017</li>
+                            <li><a href="mailto:ig.bautistadesogamoso@gmail.com">ig.bautistadesogamoso@gmail.com</a></li>
                         </ul>
                     </div>
                 </div>
