--- a/index.html
+++ b/index.html
@@ -63,8 +63,11 @@
             <div class="row">
                 <div class="col-12">
                     <h1 data-aos="fade-left" class="text-uppercase text-white fw-semibold display-1">
-                        IGLESIA REFORMADA BAUTISTA DE SOGAMOSO
+                        IGLESIA BAUTISTA DE SOGAMOSO
                     </h1>
+                    <h2 data-aos="fade-left" class="text-uppercase text-white fw-semibold ">
+                        Una Iglesia Reformada
+                    </h2>
                     <h5 class="text-white mt-3 mb-4" data-aos="fade-right">Pero nosotros, tu pueblo, ovejas de tu prado,
                         te daremos gracias por siempre; de generación en generación contaremos tu alabanza. Salmos 79:13
                     </h5>
@@ -547,7 +550,7 @@
                             <textarea name="message" name="texto" rows="5" class="form-control" placeholder="Mensaje"></textarea>
                         </div>
                         <div class="form-group col-lg-12 d-grid">
-                            <button class="btn btn-brand">Send Message</button>
+                            <button class="btn btn-brand">Enviar Mensaje</button>
                         </div>
                     </form>
                 </div>
@@ -563,7 +566,7 @@
                     <div class="section-title">
                         <h1 class="display-4 fw-semibold">Sermones Recientes</h1>
                         <div class="line"></div>
-                        <p>Aqui encontraras nuestros sermones mas recientes y estudios biblicos que haran crecer tu vida
+                        <p>Aquí encontraras nuestros sermones mas recientes y estudios bíblicos que harán crecer tu vida
                             de Fe</p>
                     </div>
                 </div>
