--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>IBS</title>
+    <title>IBS IGLESIA BAUTISTA DE SOGAMOSO</title>
+    <!-- descripcion -->
+    <meta name="description"
+        content="Somos una Iglesia Evangelica Reformada centrada en la Palabra de Dios y comprometida con comunicar su Gloria por medio del Evangelio">
+
     <!-- favicon -->
     <link rel="icon" href="./assets/images/favicon.png" type="image/png" sizes="TAMAÑO-FAV">
+
+    <!-- Open Graph / Facebook / WhatsApp -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://www.iglesia-ibs.com/">
+<meta property="og:title" content="Iglesia IBS">
+<meta property="og:description" content="Bienvenidos a la Iglesia IBS, Somos una Iglesia Evangelica Reformada centrada en la Palabra de Dios y comprometida con comunicar su Gloria por medio del Evangelio">
+<meta property="og:image" content="https://www.iglesia-ibs.com/assets/images/og-image.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
+<meta name="google-site-verification" content="Ayirbug6UfcYG-GWF_XjNodwPb4DEsQnEmmRm9LP6Po" />
+
+    <meta property="og:image" content="https://www.iglesia-ibs.com/assets/images/og-image.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
@@ -21,7 +40,7 @@
     <nav class="navbar navbar-expand-lg bg-white sticky-top">
         <div class="container ">
             <a class="navbar-brand" href="#">
-                <img id="logoNav" src="./assets/images/logo2.1.jpeg" alt="">
+                <img id="logoNav" src="./assets/images/logo2.1.jpeg" alt="logo-IBS">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -95,7 +114,7 @@
             </div>
             <div class="row justify-content-between align-items-center">
                 <div class="col-lg-6" data-aos="fade-down" data-aos-delay="50">
-                    <img src="./assets/images/logofooter.jpg" alt="">
+                    <img src="./assets/images/logofooter.jpg" alt="logo IBS">
                 </div>
                 <div data-aos="fade-down" data-aos-delay="150" class="col-lg-5">
                     <h1>Iglesia Bautista Reformada de Sogamoso</h1>
@@ -281,14 +300,14 @@
                 <div class="col-md-6" data-aos="fade-down" data-aos-delay="250">
                     <div class="portfolio-item image-zoom">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/ibs5.1.jpeg" alt="">
+                            <img src="./assets/images/ibs5.1.jpeg" alt="aniversario 2">
                         </div>
                         <a href="./assets/images/ibs5.1.jpeg" data-fancybox="gallery" class="iconbox"><i
                                 class="ri-search-2-line"></i></a>
                     </div>
                     <div class="portfolio-item image-zoom mt-4">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/ani3.jpg" alt="">
+                            <img src="./assets/images/ani3.jpg" alt="aniversario 3">
                         </div>
                         <a href="./assets/images/ani3.jpg" data-fancybox="gallery" class="iconbox"><i
                                 class="ri-search-2-line"></i></a>
@@ -485,7 +504,7 @@
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/person-3.jpg" alt="">
+                            <img src="./assets/images/narces.jpg" alt="Pastor Narces">
                         </div>
                         <div class="team-member-content">
                             <h4 class="text-white">Narcés de Jesus Rodríguez</h4>
@@ -496,7 +515,7 @@
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/person-3.jpg" alt="">
+                            <img src="./assets/images/carlos.jpg" alt="Pastor Carlos">
                         </div>
                         <div class="team-member-content">
                             <h4 class="text-white">Carlos Herrán</h4>
@@ -507,7 +526,7 @@
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/person-3.jpg" alt="">
+                            <img src="./assets/images/person-3.jpg" alt="Evangelista Diego">
                         </div>
                         <div class="team-member-content">
                             <h4 class="text-white">Diego Cárdenas</h4>
@@ -527,13 +546,15 @@
                     <div class="section-title">
                         <h1 class="display-4 text-white fw-semibold">Contactanos</h1>
                         <div class="line bg-white"></div>
-                        <p class="text-white">Contáctanos para recibir mas información, si necesitas apoyo, oración o Consejería no dudes en escribirnos</p>
+                        <p class="text-white">Contáctanos para recibir mas información, si necesitas apoyo, oración o
+                            Consejería no dudes en escribirnos</p>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center" data-aos="fade-down" data-aos-delay="250">
                 <div class="col-lg-8">
-                    <form action="https://formsubmit.co/ig.bautistadesogamoso@gmail.com" method="POST"  class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
+                    <form action="https://formsubmit.co/ig.bautistadesogamoso@gmail.com" method="POST"
+                        class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
                         <div class="form-group col-lg-6">
                             <input type="text" name="nombre" class="form-control" placeholder="Nombre">
                         </div>
@@ -547,7 +568,8 @@
                             <input type="text" name="motivo" class="form-control" placeholder="Motivo">
                         </div>
                         <div class="form-group col-lg-12">
-                            <textarea name="message" name="texto" rows="5" class="form-control" placeholder="Mensaje"></textarea>
+                            <textarea name="message" name="texto" rows="5" class="form-control"
+                                placeholder="Mensaje"></textarea>
                         </div>
                         <div class="form-group col-lg-12 d-grid">
                             <button class="btn btn-brand">Enviar Mensaje</button>
@@ -576,7 +598,7 @@
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
                             <a href="https://www.youtube.com/watch?v=tGTv8mOWO3o" target="_blank">
-                                <img src="./assets/images/sermon04-08.jpg" alt="predicacion">
+                                <img src="./assets/images/sermon04-08.jpg" alt="predicación">
                             </a>
                         </div>
                         <h5 class="mt-4">LA MUERTE, EL TORMENTO PARA LOS VIVOS - PARTE I - 04/08/2024</h5>
@@ -588,7 +610,7 @@
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
                             <a href="https://www.youtube.com/watch?v=kQl_eulG-ig" target="_blank">
-                                <img src="./assets/images/sermon 28-07-24.jpg" alt="predicacion">
+                                <img src="./assets/images/sermon 28-07-24.jpg" alt="predicación">
                             </a>
                         </div>
                         <h5 class="mt-4">ESTUDIO BIBLICO DOMINICAL CARACTER VARONIL - 28/07/2024</h5>
@@ -600,7 +622,7 @@
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
                             <a href="https://www.youtube.com/watch?v=eichkWd9kvw" target="_blank">
-                                <img src="./assets/images/sermon12-07-24.jpg" alt="predicacion">
+                                <img src="./assets/images/sermon12-07-24.jpg" alt="predicación">
                             </a>
                         </div>
                         <h5 class="mt-4">LA HONESTIDAD; EL CARACTER DEL CRISTIANO - 12/07/2024</h5>
@@ -624,10 +646,12 @@
                         <p>Iglesia Biblica</p>
                         <div class="social-icons">
                             <!-- <a href="#"><i class="ri-twitter-fill"></i></a> -->
-                            <a href="https://www.instagram.com/ig.bautistasogamoso/" target="_blank"><i class="ri-instagram-fill"></i></a>
-                            <a href="https://www.facebook.com/Iglesiabautistadesogamoso" target="_blank"><i class="ri-facebook-fill"></i></a>
+                            <a href="https://www.instagram.com/ig.bautistasogamoso/" target="_blank"><i
+                                    class="ri-instagram-fill"></i></a>
+                            <a href="https://www.facebook.com/Iglesiabautistadesogamoso" target="_blank"><i
+                                    class="ri-facebook-fill"></i></a>
                             <a href="#"><i class="ri-whatsapp-fill"></i></a>
-                            
+
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
@@ -658,7 +682,8 @@
                         <ul>
                             <li>Cra 14 #18-47 Sogamoso, Boyacá</li>
                             <li>(+57) 586 - 3017</li>
-                            <li><a href="mailto:ig.bautistadesogamoso@gmail.com">ig.bautistadesogamoso@gmail.com</a></li>
+                            <li><a href="mailto:ig.bautistadesogamoso@gmail.com">ig.bautistadesogamoso@gmail.com</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
