--- a/leer-mas.html
+++ b/leer-mas.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IBS</title>
+  <title>IBS ACERCA DE NOSOTROS</title>
   <!-- favicon -->
   <link rel="icon" href="./assets/images/favicon.png" type="image/png" sizes="TAMAÑO-FAV">
 
