--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <meta property="og:url" content="https://www.iglesia-ibs.com/">
 <meta property="og:title" content="Iglesia IBS">
 <meta property="og:description" content="Bienvenidos a la Iglesia IBS, Somos una Iglesia Evangelica Reformada centrada en la Palabra de Dios y comprometida con comunicar su Gloria por medio del Evangelio">
-<meta property="og:image" content="https://www.iglesia-ibs.com/assets/images/og-image.jpg">
+<meta property="og:image" content="https://www.iglesia-ibs.com/assets/images/og-image.jpeg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 
