imagenes para compartir

--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
 <meta property="og:url" content="https://www.iglesia-ibs.com/">
 <meta property="og:title" content="Iglesia IBS">
 <meta property="og:description" content="Bienvenidos a la Iglesia IBS, Somos una Iglesia Evangelica Reformada centrada en la Palabra de Dios y comprometida con comunicar su Gloria por medio del Evangelio">
-<meta property="og:image" content="https://www.iglesia-ibs.com/assets/images/og-image.jpeg">
+<meta property="og:image" content="https://www.iglesia-ibs.com/assets/images/og-image.png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
-
-<meta name="google-site-verification" content="Ayirbug6UfcYG-GWF_XjNodwPb4DEsQnEmmRm9LP6Po" />
-
-    <meta property="og:image" content="https://www.iglesia-ibs.com/assets/images/og-image.jpg">
+    <meta property="og:image" content="https://www.iglesia-ibs.com/assets/images/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+
+    <meta name="google-site-verification" content="Ayirbug6UfcYG-GWF_XjNodwPb4DEsQnEmmRm9LP6Po" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
