--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 
     <!-- favicon -->
     <link rel="icon" href="./assets/images/favicon.png" type="image/png" sizes="TAMAÑO-FAV">
+    
     <!-- Open Graph / Facebook / WhatsApp -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://www.iglesia-ibs.com/">
-<meta property="og:title" content="Iglesia IBS">
-<meta property="og:description" content="Bienvenidos a la Iglesia IBS, un lugar para la fe, la comunidad y la esperanza.">
-<meta property="og:image" content="https://www.iglesia-ibs.com/assets/images/og-image.png"> <!-- Extensión .png -->
-<meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="630">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.iglesia-ibs.com/">
+    <meta property="og:title" content="Iglesia IBS">
+    <meta property="og:description"
+        content="Bienvenidos a la Iglesia IBS, un lugar para la fe, la comunidad y la esperanza.">
+    <meta property="og:image" content="https://www.iglesia-ibs.com/assets/images/og-image.png"> <!-- Extensión .png -->
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
 
     <meta name="google-site-verification" content="Ayirbug6UfcYG-GWF_XjNodwPb4DEsQnEmmRm9LP6Po" />
 
