--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/person-3.jpg" alt="Evangelista Diego">
+                            <img src="./assets/images/diego.jpg" alt="Evangelista Diego">
                         </div>
                         <div class="team-member-content">
                             <h4 class="text-white">Diego Cárdenas</h4>
@@ -541,7 +541,7 @@
             <div class="row">
                 <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="150">
                     <div class="section-title">
-                        <h1 class="display-4 text-white fw-semibold">Contactanos</h1>
+                        <h1 class="display-4 text-white fw-semibold">Contáctanos</h1>
                         <div class="line bg-white"></div>
                         <p class="text-white">Contáctanos para recibir mas información, si necesitas apoyo, oración o
                             Consejería no dudes en escribirnos</p>
@@ -585,7 +585,7 @@
                     <div class="section-title">
                         <h1 class="display-4 fw-semibold">Sermones Recientes</h1>
                         <div class="line"></div>
-                        <p>Aquí encontraras nuestros sermones mas recientes y estudios bíblicos que harán crecer tu vida
+                        <p>Aquí encontrarás nuestros sermones más recientes y estudios bíblicos que harán crecer tu vida
                             de Fe</p>
                     </div>
                 </div>
@@ -637,7 +637,7 @@
             <div class="container">
                 <div class="row gy-5">
                     <div class="col-lg-3 col-sm-6">
-                        <a href="#"><img style="border-radius: 50%; width: 12.5rem;" src="./assets/images/logo2.1.jpeg"
+                        <a href="#"><img style="border-radius: 30%; width: 12.9rem;" src="./assets/images/logo2.1.jpeg"
                                 alt=""></a>
                         <div class="line"></div>
                         <p>Iglesia Biblica</p>
@@ -647,7 +647,7 @@
                                     class="ri-instagram-fill"></i></a>
                             <a href="https://www.facebook.com/Iglesiabautistadesogamoso" target="_blank"><i
                                     class="ri-facebook-fill"></i></a>
-                            <a href="#"><i class="ri-whatsapp-fill"></i></a>
+                            <a href="https://wa.me/573054053692?text=Hola,%20me%20gustaría%20obtener%20más%20información" target="_blank"><i class="ri-whatsapp-fill"></i></a>
 
                         </div>
                     </div>
@@ -674,11 +674,11 @@
                         </ul>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <h5 class="mb-0 text-white">CONTACT</h5>
+                        <h5 class="mb-0 text-white">CONTACTO</h5>
                         <div class="line"></div>
                         <ul>
                             <li>Cra 14 #18-47 Sogamoso, Boyacá</li>
-                            <li>(+57) 586 - 3017</li>
+                            <li>(+57) 305 4053692</li>
                             <li><a href="mailto:ig.bautistadesogamoso@gmail.com">ig.bautistadesogamoso@gmail.com</a>
                             </li>
                         </ul>
