--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- favicon -->
     <link rel="icon" href="./assets/images/favicon.png" type="image/png" sizes="TAMAÑO-FAV">
-    
+
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.iglesia-ibs.com/">
@@ -69,6 +69,11 @@
                     </li>
                 </ul>
                 <a href="#contact" class="btn btn-brand ms-lg-3">Contacto</a>
+
+                <div class="social-iconsW">
+                    <a href="https://wa.me/573054053692?text=Hola,%20me%20gustaría%20obtener%20más%20información"
+                        target="_blank"><i style="font-size: 1.3rem;" class="ri-whatsapp-fill"></i></a>
+                </div>
             </div>
         </div>
     </nav>
@@ -640,14 +645,15 @@
                         <a href="#"><img style="border-radius: 30%; width: 12.9rem;" src="./assets/images/logo2.1.jpeg"
                                 alt=""></a>
                         <div class="line"></div>
-                        <p>Iglesia Biblica</p>
+                        <p>Nuestras Redes Sociales</p>
                         <div class="social-icons">
                             <!-- <a href="#"><i class="ri-twitter-fill"></i></a> -->
                             <a href="https://www.instagram.com/ig.bautistasogamoso/" target="_blank"><i
                                     class="ri-instagram-fill"></i></a>
                             <a href="https://www.facebook.com/Iglesiabautistadesogamoso" target="_blank"><i
                                     class="ri-facebook-fill"></i></a>
-                            <a href="https://wa.me/573054053692?text=Hola,%20me%20gustaría%20obtener%20más%20información" target="_blank"><i class="ri-whatsapp-fill"></i></a>
+                            <a href="https://wa.me/573054053692?text=Hola,%20me%20gustaría%20obtener%20más%20información"
+                                target="_blank"><i class="ri-whatsapp-fill"></i></a>
 
                         </div>
                     </div>
