--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </div>
             <div class="row justify-content-between align-items-center">
                 <div class="col-lg-6" data-aos="fade-down" data-aos-delay="50">
-                    <img src="./assets/images/logofooter.jpg" alt="logo IBS">
+                    <img class="imagen-con-estilo " src="./assets/images/servidores.jpg" alt="logo IBS">
                 </div>
                 <div data-aos="fade-down" data-aos-delay="150" class="col-lg-5">
                     <h1>Iglesia Bautista Reformada de Sogamoso</h1>
@@ -495,7 +495,7 @@
             <div class="row">
                 <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="150">
                     <div class="section-title">
-                        <h1 class="display-4 fw-semibold">Nuestro Servidores</h1>
+                        <h1 class="display-4 fw-semibold">Nuestros Servidores</h1>
                         <div class="line"></div>
                         <p>Por tanto, mirad por vosotros, y por todo el rebaño en que el Espíritu Santo os ha puesto por
                             obispos, para apacentar la iglesia del Señor, la cual él ganó por su propia sangre.</p>
@@ -599,37 +599,40 @@
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <a href="https://www.youtube.com/watch?v=tGTv8mOWO3o" target="_blank">
-                                <img src="./assets/images/sermon04-08.jpg" alt="predicación">
-                            </a>
+                            <iframe src="https://www.youtube.com/embed/q0lFTt_ks2k" title="YouTube video player"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
                         </div>
-                        <h5 class="mt-4">LA MUERTE, EL TORMENTO PARA LOS VIVOS - PARTE I - 04/08/2024</h5>
+                        <h5 class="mt-4">LA MUERTE, EL TORMENTO PARA LOS VIVOS - Parte III - 18/08/2024</h5>
                         <p></p>
-                        <a href="https://www.youtube.com/watch?v=tGTv8mOWO3o" target="_blank">ver Video</a>
+                        <a href="https://www.youtube.com/watch?v=q0lFTt_ks2k" target="_blank">ver Video</a>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <a href="https://www.youtube.com/watch?v=kQl_eulG-ig" target="_blank">
-                                <img src="./assets/images/sermon 28-07-24.jpg" alt="predicación">
-                            </a>
+                            <iframe src="https://www.youtube.com/embed/gUdasB-M4jk"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
                         </div>
-                        <h5 class="mt-4">ESTUDIO BIBLICO DOMINICAL CARACTER VARONIL - 28/07/2024</h5>
+                        <h5 class="mt-4">LA BELLEZA DE LA ORACIÓN - PARTE I- 16/08/2024</h5>
                         <p></p>
-                        <a href="https://www.youtube.com/watch?v=kQl_eulG-ig" target="_blank">Ver video</a>
+                        <a href="https://www.youtube.com/watch?v=gUdasB-M4jk" target="_blank">Ver video</a>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <a href="https://www.youtube.com/watch?v=eichkWd9kvw" target="_blank">
-                                <img src="./assets/images/sermon12-07-24.jpg" alt="predicación">
-                            </a>
+                            <iframe src="https://www.youtube.com/embed/tGTv8mOWO3o"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
                         </div>
-                        <h5 class="mt-4">LA HONESTIDAD; EL CARACTER DEL CRISTIANO - 12/07/2024</h5>
+                        <h5 class="mt-4">LA MUERTE, EL TORMENTO PARA LOS VIVOS - PARTE I - 04/08/2024</h5>
                         <p></p>
-                        <a href="https://www.youtube.com/watch?v=eichkWd9kvw" target="_blank"> Ver video</a>
+                        <a href="https://www.youtube.com/watch?v=tGTv8mOWO3o" target="_blank">ver Video</a>
                     </div>
                 </div>
             </div>
@@ -661,8 +664,8 @@
                         <h5 class="mb-0 text-white">Estamos para servirte</h5>
                         <div class="line"></div>
                         <ul>
-                            <li><a href="#contact">Consejeria</a></li>
-                            <li><a href="#contact">Oracion</a></li>
+                            <li><a href="#contact">Consejería</a></li>
+                            <li><a href="#contact">Oración</a></li>
                             <li><a href="#contact">Servicio Social</a></li>
                             <!-- <li><a href="#"></a>Donaciones </li> -->
                         </ul>
