--- a/index.html
+++ b/index.html
@@ -599,40 +599,40 @@
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <iframe src="https://www.youtube.com/embed/q0lFTt_ks2k" title="YouTube video player"
+                            <iframe src="https://www.youtube.com/embed/p3wjkkA5LPU" title="YouTube video player"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                         </div>
-                        <h5 class="mt-4">LA MUERTE, EL TORMENTO PARA LOS VIVOS - Parte III - 18/08/2024</h5>
+                        <h5 class="mt-4">Estudio Bíblico 1 Pedro - Parte XIV - 21/03/2025</h5>
                         <p></p>
-                        <a href="https://www.youtube.com/watch?v=q0lFTt_ks2k" target="_blank">ver Video</a>
+                        <a href="https://www.youtube.com/watch?v=p3wjkkA5LPU" target="_blank">ver Video</a>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <iframe src="https://www.youtube.com/embed/gUdasB-M4jk"
-                                title="YouTube video player" frameborder="0"
+                            <iframe src="https://www.youtube.com/embed/0NMiAb4KbyY" title="YouTube video player"
+                                frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                         </div>
-                        <h5 class="mt-4">LA BELLEZA DE LA ORACIÓN - PARTE I- 16/08/2024</h5>
+                        <h5 class="mt-4">Epístola a los romanos - Romanos 1:8-15 - Parte IX - 09/03/2025</h5>
                         <p></p>
-                        <a href="https://www.youtube.com/watch?v=gUdasB-M4jk" target="_blank">Ver video</a>
+                        <a href="https://www.youtube.com/watch?v=0NMiAb4KbyY" target="_blank">Ver video</a>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <iframe src="https://www.youtube.com/embed/tGTv8mOWO3o"
-                                title="YouTube video player" frameborder="0"
+                            <iframe src="https://www.youtube.com/embed/QKkvFZZwGOM" title="YouTube video player"
+                                frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                         </div>
-                        <h5 class="mt-4">LA MUERTE, EL TORMENTO PARA LOS VIVOS - PARTE I - 04/08/2024</h5>
+                        <h5 class="mt-4">Epístola a los romanos - Romanos 1:8-15 - Parte X - 16/03/2025</h5>
                         <p></p>
-                        <a href="https://www.youtube.com/watch?v=tGTv8mOWO3o" target="_blank">ver Video</a>
+                        <a href="https://www.youtube.com/watch?v=QKkvFZZwGOM" target="_blank">ver Video</a>
                     </div>
                 </div>
             </div>
